[package]
name = "cadk-bnf"
version = "0.1.0"
edition = "2024"
license      = "MIT"
description  = "Parser for .bnf (Extended Backus–Naur form) files"
readme       = "README.md"
repository   = "https://github.com/davefol/cadk-bnf"
keywords     = ["parser", "bnf"]

[dependencies]
anyhow = "1.0.98"
lalrpop-util = "0.22.2"
logos = "0.15.0"
thiserror = "2.0.12"

[build-dependencies]
lalrpop = { version = "0.22.2", default-false = false }
