[package]
name = "cadk"
version = "0.1.0"
edition = "2024"
license      = "MIT"
description  = "CAD kernel in pure Rust (B-Rep, CSG, tessellation)"
readme       = "README.md"
repository   = "https://github.com/davefol/cadk"
keywords     = ["cad", "kernel", "geometry", "brep"]
categories   = ["graphics", "science"]
documentation = "https://docs.rs/cadk"

[dependencies]
